2001-09-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/Graphics.c (RelieveRectangle):
	print a warning if one of the dimensions is <= 0

	* fvwm/placement.c (PlaceWindow):
	take care of windows that have both, PPosition and USPosition set
	take care of transient windows that have neither PPosition nor
	USPosition set

2001-07-23  olicha  <olivier.chapuis@free.fr>

	* libs/FScreen.c (FScreenInit):
	Fixed the position of the xinerama emulation delimiters

2001-08-31  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm2.1:
	Xinerama introduction

	* fvwm/icons.c (AutoPlaceIcon):
	try to place icons of screen with the window center, and if that fails
	on any screen

	* libs/FScreen.c (FScreenGetScrRect):
	performance improvement for non-xinerama systems

	* fvwm/update.c (apply_window_updates):
	(flush_window_updates):
	update icon boxes and icon position when xinerama layout changes

	* fvwm/icons.c (AutoPlaceIcon):
	limit placement of icons using no icon box to screen boundaries
	adapt icon boxes to xinerama layout whenever used

	* fvwm/placement.c (PlaceWindow):
	* fvwm/style.c (CMD_Style):
	(check_window_style_change):
	* fvwm/style.h (SUSE_NO_USPOSITION):
	(SUSE_NO_TRANSIENT_PPOSITION):
	(SUSE_NO_TRANSIENT_USPOSITION):
	* fvwm/fvwm.h (struct):
	implemented new styles NoUSPosition/UseUSPosition,
	NoTransientPPosition/UseTransientPPosition,
	NoTransientUSPosition/UseTransientUSPosition.
	These work exactly like NoPPosition/UsePPosition.
	Transient windows ignore the window position if neither the PPosition
	nor the USPosition hint is set.

2001-08-28  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/focus.c (restore_focus_after_unmap):
	fixed a bug transfering the focus when a window was iconified

2001-08-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/conditional.c (MatchesConditionMask):
	* fvwm/move_resize.c (position_geometry_window):
	* fvwm/placement.c (PlaceWindow):
	* fvwm/menus.c (pop_menu_up):
	* fvwm/move_resize.c (move_window_doit):