@@ -1,3 +1,9 @@
+2001-09-03  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/focus.c (focus_grab_buttons):
+	(MoveFocus):
+	disabled xt/double click patch for now
+
 2001-09-01  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* libs/Graphics.c (RelieveRectangle):
